# dotmd

./: Cargo.toml  README.md  index.html
public/css/: index.css  markdown-preview.css
src/: app.rs
src/components/: mod.rs  safe_html.rs  text_area.rs
src/utils/: example.rs  mod.rs  parse_markdown.rs
